CLOSED FIXED31779
QWebPage::findText() does not clear selection when passed empty string
https://bugs.webkit.org/show_bug.cgi?id=31779
Summary QWebPage::findText() does not clear selection when passed empty string
Mark Turney
Reported 2009-11-21 19:51:08 PST
Created attachment 43670 [details] running example of the bug in question The text within the Qt documentation for QWebPage::findText() states that "To clear the selection, just pass an empty string.". When an empty string is passed into this method as demonstrated by the included cpp file, QWebPage::findText() fails to clear the selection. This bug was tested in 4.6-RC1 on Linux64.
Attachments
running example of the bug in question (708 bytes, text/x-c++src)
2009-11-21 19:51 PST, Mark Turney
no flags
proposed patch (2.66 KB, patch)
2010-06-08 12:50 PDT, Pierre Rossi
no flags
Argh, my Changelog really had no style at all! (2.67 KB, patch)
2010-06-08 12:57 PDT, Pierre Rossi
no flags
Rion
Comment 1 2010-01-13 14:28:41 PST
the same for 4.6.0 release.
Dawit A.
Comment 2 2010-03-03 15:12:52 PST
FYI... Clearing of the selection will work correctly for the text highlighted when the HighlightAllOccurrances flag is set so long as you specify this very same flag when you calling the function with an empty string...
Benjamin Poulain
Comment 3 2010-03-05 15:50:15 PST
Same with trunk.
Pierre Rossi
Comment 4 2010-06-08 12:50:45 PDT
Created attachment 58169 [details] proposed patch
WebKit Review Bot
Comment 5 2010-06-08 12:52:40 PDT
Attachment 58169 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebKit/qt/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] WebKit/qt/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] WARNING: File exempt from style guide. Skipping: "WebKit/qt/Api/qwebpage.cpp" WARNING: File exempt from style guide. Skipping: "WebKit/qt/tests/qwebpage/tst_qwebpage.cpp" Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Pierre Rossi
Comment 6 2010-06-08 12:57:51 PDT
Created attachment 58172 [details] Argh, my Changelog really had no style at all!
WebKit Commit Bot
Comment 7 2010-06-09 21:39:50 PDT
Comment on attachment 58172 [details] Argh, my Changelog really had no style at all! Clearing flags on attachment: 58172 Committed r60935: <http://trac.webkit.org/changeset/60935>
WebKit Commit Bot
Comment 8 2010-06-09 21:39:59 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 9 2010-06-13 14:12:02 PDT
Revision r60935 cherry-picked into qtwebkit-2.0 with commit 0f8941d0dd5f947530e1dc55b859d810bba14764
Note You need to log in before you can comment on or make changes to this bug.