2010-06-09  Pierre Rossi  <pierre.rossi@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        QWebPage::findText() does not clear selection when passed empty string
        https://bugs.webkit.org/show_bug.cgi?id=31779

        * Api/qwebpage.cpp:
        (QWebPage::findText):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::findText):

Canonical link: https://commits.webkit.org/51950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60935 268f45cc-cd09-0410-ab3c-d52691b4dbfc